--- a/Tag 1/Aufgabe 1/A_02_01_01.md
+++ b/Tag 1/Aufgabe 1/A_02_01_01.md
@@ -1,8 +1,7 @@
-# Aufgabe_02_01_01
+# Aufgabe_02_02_02
 
 ---
 
-![A_02_01_01]()
+## Aufgabenstellung:
 
-Aufgabenstellung:
-Implementieren Sie bitte das obige Schema.
+
